# medpass360-server

./: .gitignore  Dockerfile  GEMINI.md  docker-compose.yml  pyproject.toml  requirements.txt  seperate_profile_tables_plan.md  verify_profile_access.py
app/: main.py  reset_db.py  test_health_profile.py  test_medical_option.py  test_registration.py
app/alembic/: env.py
app/alembic/versions/: 2dc38d39f5a0_add_profile_shares.py  30f7ae779042_device_biometric_tracking.py  677485fc5d96_add_is_verified_to_profile.py  882e08267b3d_add_phone_number_to_profile.py  89b398d0b329_add_medical_options_table.py  9c94fe7b2d91_normalize_health_profile_schema.py  bd1e62c8968b_use_separate_catalog_and_single_.py  c177b938519f_use_single_medical_options_table.py  c5a1c8662497_expand_medications_table.py  c8d0ee6a1c1e_initial_migration.py  d5dadae8c8b5_normalize_health_profile_junction_tables.py  d69fa67a6bb9_add_avatar_to_profile.py  e10e295fc166_add_has_biometrics.py  e3b33531c579_add_is_stopped_to_medications.py  f136381ceb5f_remove_medical_options_table_and_add_.py  (+1 more)
app/api/: deps.py
app/assets/: terms_privacy.md
app/core/: config.py  database.py  exceptions.py  jwt_service.py  middleware.py  seeding.py  utils.py
app/crud/: __init__.py  medical_option.py  profile_share.py  user.py
app/models/: __init__.py  medical_option.py  profile.py  profile_access.py  profile_share.py  user.py  user_biometric.py  user_session.py
app/schemas/: __init__.py  auth.py  medical_option.py  profile_access.py  profile_share.py  response.py  user.py
app/services/: registration.py
(+9 files in other folders)
