[project]
name = "medpass360-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "fastapi-redis-sdk>=0.1.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.7.0",
    "pyjwt>=2.8.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]
